# specdrift

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
specdrift/: cli.py  contracts.py  drift.py  git_tools.py  specs.py  workgraph.py
specrift/: cli.py  drift.py  globmatch.py  specs.py  workgraph.py
tests/: test_imports.py
