[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specdrift"
version = "0.1.0"
description = "Speedrift-suite spec/documentation drift checker for Workgraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "speedrift-lane-sdk",
]

[project.scripts]
specdrift = "specdrift.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["specdrift*"]

[tool.uv.sources]
speedrift-lane-sdk = { path = "../speedrift-lane-sdk", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

